tests/errors/test_07.x
// Incompatible type for this binary operator

fn main() -> i64 {

    let x: i64 = 1 + true;

    let x1: i8 = "false" - 19;

}